remove deprecated APIs